--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
+  "name": "cucai",
+  "description": "website for Canadian Undergraduate Conference on AI",
   "version": "1.1.3",
-  "author": "Austin Green",
+  "author": "Parker Rowe & Katie Lu",
   "dependencies": {
     "bulma": "^0.9.0",
     "gatsby": "^2.20.35",
