working on parallax

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -26,6 +26,8 @@ collections:
           - {label: Slogan, name: slogan, widget: string}
           - {label: Location, name: location, widget: string}
           - {label: Date, name: date, widget: string}
+          - {label: CTA1, name: cta1, widget: string}
+          - {label: CTA2, name: cta2, widget: string}
           - {label: Mainpitch, name: mainpitch, widget: object, fields: [{label: Title, name: title, widget: string}, {label: Description, name: description, widget: text}]}
           - {label: Description, name: description, widget: string}
           - {label: Intro, name: intro, widget: object, fields: [{label: Heading, name: heading, widget: string}, {label: Description, name: description, widget: text}, {label: Blurbs, name: blurbs, widget: list, fields: [{label: Image, name: image, widget: image}, {label: Text, name: text, widget: text}]}]}
