--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^6.0.0",
+    "react-scroll-parallax": "^2.3.4",
     "styled-components": "^5.1.1",
     "uuid": "^7.0.0"
   },
