--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.1.3",
   "author": "Parker Rowe & Katie Lu",
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "bulma": "^0.9.0",
     "gatsby": "^2.20.35",
     "gatsby-image": "^2.3.5",
@@ -24,6 +25,7 @@
     "netlify-cms-app": "^2.9.6",
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.8.4",
     "react-helmet": "^6.0.0",
     "react-scroll-parallax": "^2.3.4",
