--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "react-reveal": "^1.2.2"
   }
 }
