--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.5.2",
     "bulma": "^0.9.0",
     "gatsby": "^2.29.2",
+    "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^2.3.5",
     "gatsby-plugin-netlify": "^2.2.4",
     "gatsby-plugin-netlify-cms": "^4.2.5",
