--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-transformer-sharp": "^2.4.7",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
+    "lottie-web": "^5.7.5",
     "netlify-cms-app": "^2.9.6",
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
