update to netflify node 14

--- a/package.json
+++ b/package.json
@@ -1,54 +1,1 @@
-{
-  "name": "cucai",
-  "description": "website for Canadian Undergraduate Conference on AI",
-  "version": "1.1.3",
-  "author": "Parker Rowe & Katie Lu",
-  "dependencies": {
-    "bootstrap": "^4.5.2",
-    "bulma": "^0.9.0",
-    "gatsby": "^2.29.2",
-    "gatsby-background-image": "^1.3.1",
-    "gatsby-image": "^2.3.5",
-    "gatsby-plugin-netlify": "^2.2.4",
-    "gatsby-plugin-netlify-cms": "^4.2.5",
-    "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.2.5",
-    "gatsby-plugin-sharp": "^2.5.7",
-    "gatsby-plugin-styled-components": "^3.3.10",
-    "gatsby-remark-copy-linked-files": "^2.2.4",
-    "gatsby-remark-images": "^3.2.6",
-    "gatsby-remark-relative-images": "^0.3.0",
-    "gatsby-source-filesystem": "^2.2.5",
-    "gatsby-transformer-remark": "^2.7.5",
-    "gatsby-transformer-sharp": "^2.4.7",
-    "lodash": "^4.17.15",
-    "lodash-webpack-plugin": "^0.11.4",
-    "lottie-web": "^5.7.5",
-    "netlify-cms-app": "^2.9.6",
-    "prop-types": "^15.6.0",
-    "react": "^16.8.4",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.8.4",
-    "react-helmet": "^6.0.0",
-    "react-scroll-parallax": "^2.3.4",
-    "styled-components": "^5.1.1",
-    "uuid": "^7.0.0"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "main": "n/a",
-  "scripts": {
-    "clean": "gatsby clean",
-    "start": "npm run develop",
-    "build": "npm run clean && gatsby build",
-    "develop": "npm run clean && gatsby develop",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "prettier": "^2.0.5",
-    "react-reveal": "^1.2.2"
-  }
-}
+{"name":"cucai","description":"website for Canadian Undergraduate Conference on AI","version":"1.1.3","author":"Parker Rowe & Katie Lu","dependencies":{"bootstrap":"*","bulma":"*","gatsby":"*","gatsby-background-image":"*","gatsby-image":"*","gatsby-plugin-netlify":"*","gatsby-plugin-netlify-cms":"*","gatsby-plugin-purgecss":"*","gatsby-plugin-react-helmet":"*","gatsby-plugin-sharp":"*","gatsby-plugin-styled-components":"*","gatsby-remark-copy-linked-files":"*","gatsby-remark-images":"*","gatsby-remark-relative-images":"*","gatsby-source-filesystem":"*","gatsby-transformer-remark":"*","gatsby-transformer-sharp":"*","imagemin-pngquant":"*","lodash":"*","lodash-webpack-plugin":"*","lottie-web":"*","netlify-cms-app":"*","pngquant-bin":"*","prop-types":"*","react":"*","react-bootstrap":"*","react-dom":"*","react-helmet":"*","react-scroll-parallax":"*","styled-components":"*","uuid":"*"},"keywords":["gatsby"],"license":"MIT","main":"n/a","scripts":{"update:packages":"node wipe-dependencies.js && rm -rf node_modules && npm update --save-dev && npm update --save","clean":"gatsby clean","start":"npm run develop","build":"npm run clean && gatsby build","develop":"npm run clean && gatsby develop","format":"prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"","test":"echo \"Error: no test specified\" && exit 1"},"devDependencies":{"prettier":"*","react-reveal":"*"}}
