more fakid changes

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "react-dom": "*",
     "react-helmet": "*",
     "react-scroll-parallax": "*",
+    "react-slick": "^0.27.13",
+    "react-transition-group": "^4.4.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "*",
     "uuid": "*"
   },
