Corrected spelling error and added particles

--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "gatsby-plugin-styled-components": "*",
     "gatsby-remark-copy-linked-files": "*",
     "gatsby-remark-images": "*",
-    "gatsby-remark-relative-images": "^0.2.0",
+    "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-filesystem": "*",
     "gatsby-transformer-remark": "*",
     "gatsby-transformer-sharp": "*",
     "imagemin-pngquant": "*",
-    "lodash": "*",
+    "lodash": "^4.17.20",
     "lodash-webpack-plugin": "*",
     "lottie-web": "*",
     "netlify-cms-app": "*",
@@ -32,6 +32,7 @@
     "react-bootstrap": "*",
     "react-dom": "*",
     "react-helmet": "*",
+    "react-particles-js": "^3.4.1",
     "react-scroll-parallax": "*",
     "react-slick": "^0.27.13",
     "react-transition-group": "^4.4.1",
