started on sched

--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "gatsby-source-filesystem": "*",
     "gatsby-transformer-remark": "*",
     "gatsby-transformer-sharp": "*",
+    "ics-to-json": "^1.0.0",
     "imagemin-pngquant": "*",
     "lodash": "^4.17.20",
     "lodash-webpack-plugin": "*",
     "lottie-web": "*",
+    "moment-timezone": "^0.5.32",
     "netlify-cms-app": "*",
     "pngquant-bin": "*",
     "prop-types": "*",
