update netlify plugin

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "gatsby": "^2.32.0",
     "gatsby-background-image": "*",
     "gatsby-image": "*",
-    "gatsby-plugin-netlify": "*",
-    "gatsby-plugin-netlify-cms": "*",
+    "gatsby-plugin-netlify": "^2.11.0",
+    "gatsby-plugin-netlify-cms": "^4.10.0",
     "gatsby-plugin-purgecss": "*",
     "gatsby-plugin-react-helmet": "*",
     "gatsby-plugin-sharp": "*",
