--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bootstrap": "*",
     "bulma": "*",
+    "date-and-time": "^0.14.2",
     "gatsby": "^2.32.0",
     "gatsby-background-image": "*",
     "gatsby-image": "*",
